--- a/contributors/ttwf_shanghai/myst729/grid-layout-basic.html
+++ b/contributors/ttwf_shanghai/myst729/grid-layout-basic.html
@@ -16,15 +16,12 @@
         height: 40px;
       }
       #grid {
-        height: 300px;
-        width: 400px;
+        width: 150px;
         background: #eee;
         display: grid;
         display: -ms-grid;
-        grid-definition-columns: 100px 300px;
-        -ms-grid-columns: 100px 300px;
-        grid-definition-rows: 80px 170px 50px;
-        -ms-grid-rows: 80px 170px 50px;
+        grid-definition-columns: 100px 50px;
+        -ms-grid-columns: 100px 50px;
       }
       .a {
         background: blue;
@@ -37,24 +34,16 @@
         background: yellow;
         grid-column: 2;
         -ms-grid-column: 2;
-        grid-row: 2;
-        -ms-grid-row: 2;
-      }
-      .c {
-        background: pink;
-        grid-column: 1;
-        -ms-grid-column: 1;
-        grid-row: 3;
-        -ms-grid-row: 3;
+        grid-row: 1;
+        -ms-grid-row: 1;
       }
     </style>
   </head>
   <body>
     <p id="caseTitle">The test passes if it has the same visual effect as reference.</p>
     <div id="grid">
-      <div class="a">a</div>
-      <div class="b">b</div>
-      <div class="c">c</div>
+      <div class="a">&nbsp;</div>
+      <div class="b">&nbsp;</div>
     </div>
   </body>
 </html>
