--- a/contributors/ttwf_shanghai/myst729/grid-layout-lines.html
+++ b/contributors/ttwf_shanghai/myst729/grid-layout-lines.html
@@ -4,7 +4,7 @@
     <title>CSS Grid Layout Test: grid lines</title>
     <link rel="author" title="Leo Deng" href="mailto:myst.dg@gmail.com">
     <link rel="help" href="http://www.w3.org/TR/css3-grid-layout/#grid-line">
-    <link rel="match" href="reference/grid-layout-grid-span-ref.html">
+    <link rel="match" href="reference/grid-layout-basic-ref.html">
     <meta name="assert" content="the subgrid layout should behave the same as reference.">
     <style>
       body {
@@ -16,26 +16,19 @@
         height: 40px;
       }
       #grid {
-        height: 300px;
-        width: 400px;
+        width: 150px;
         background: #eee;
         display: grid;
         display: -ms-grid;
-        grid-definition-columns: "left" 100px "center" 300px "right";
-        -ms-grid-columns: "left" 100px "center" 300px "right";
-        grid-definition-rows: "one" 80px "two" 170px "three" 50px "four";
-        -ms-grid-rows: "one" 80px "two" 170px "three" 50px "four";
+        grid-definition-columns: "left" 100px "center" 50px "right";
+        -ms-grid-columns: "left" 100px "center" 50px "right";
       }
       .a {
         background: blue;
         grid-start: "left";
         -ms-grid-start: "left";
         grid-end: "center";
-        -ms-grid-end: "center";
-        grid-before: "one";
-        -ms-grid-before: "one";
-        grid-after: "three";
-        -ms-grid-after: "three";
+        -ms-grid-end: "center";;
       }
       .b {
         background: yellow;
@@ -43,30 +36,14 @@
         -ms-grid-start: "center";
         grid-end: "right";
         -ms-grid-end: "right";
-        grid-before: "two";
-        -ms-grid-before: "two";
-        grid-after: "three";
-        -ms-grid-after: "three";
-      }
-      .c {
-        background: pink;
-        grid-start: "left";
-        -ms-grid-start: "left";
-        grid-end: "right";
-        -ms-grid-end: "right";
-        grid-before: "three";
-        -ms-grid-before: "three";
-        grid-after: "four";
-        -ms-grid-after: "four";
       }
     </style>
   </head>
   <body>
     <p id="caseTitle">The test passes if it has the same visual effect as reference.</p>
     <div id="grid">
-      <div class="a">a</div>
-      <div class="b">b</div>
-      <div class="c">c</div>
+      <div class="a">&nbsp;</div>
+      <div class="b">&nbsp;</div>
     </div>
   </body>
 </html>
