move files to /FileAPI
https://github.com/w3c/web-platform-tests/pull/282#issuecomment-22826835

--- a/FileAPI/Breezewish/line-endings.html
+++ b/FileAPI/Breezewish/line-endings.html
@@ -5,7 +5,7 @@
 <link rel=author title="Breezewish" href="mailto:me@breeswish.org">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
-<script src="../support/platform_detection.js"></script>
+<script src="support/platform_detection.js"></script>
 <div id="log"></div>
 <script>
 
