--- a/IndexedDB/submissions/ericdum/idontknow.html
+++ b/IndexedDB/submissions/ericdum/idontknow.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Just Try It... Exceptions</title>
+        <title>Exceptions of indexedDB</title>
         <link rel="author" title="ericdum" href="mailto:formateric@gmail.com"/>
         <link rel=help href="http://dvcs.w3.org/hg/IndexedDB/raw-file/tip/Overview.html#introduction">
-        <meta name="flags" content="introduction" />
-        <meta name="assert" content="introduction running fine"/>
+        <meta name="flags" content="exception, indexedDB" />
+        <meta name="assert" content="Exceptions Will be running fine"/>
         <script src="./resources/testharness.js"></script>
         <script src="./resources/testharnessreport.js"></script>
         <script src="./resources/underscore.js"></script>
