--- a/FileAPI/url/url_createobjecturl_blob.html
+++ b/FileAPI/url/url_createobjecturl_blob.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>File API: url</title>
+    <title>FileAPI Test: url</title>
     <link rel="author" title="Intel" href="www.intel.com">
     <link rel="help" href="http://www.w3.org/TR/FileAPI/#dfn-createObjectURL">
     <script src="/resources/testharness.js"></script>
