--- a/FileAPI/url/url_createobjecturl_file_img.html
+++ b/FileAPI/url/url_createobjecturl_file_img.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>File API: url_createobjecturl_img</title>
+    <title>FileAPI Test: url_createobjecturl_img</title>
     <link rel="author" title="Intel" href="www.intel.com">
     <link rel="help" href="http://www.w3.org/TR/FileAPI/#creating-revoking">
   </head>
