Add a test for 'LATIN SMALL LETTER DOTLESS I' in the argument to Document.createEvent.

--- a/dom/nodes/Document-createEvent.html
+++ b/dom/nodes/Document-createEvent.html
@@ -55,5 +55,9 @@ test(function() {
     // 'LATIN CAPITAL LETTER I WITH DOT ABOVE' (U+0130)
     var evt = document.createEvent("U\u0130Event");
   });
+  assert_throws("NOT_SUPPORTED_ERR", function() {
+    // 'LATIN SMALL LETTER DOTLESS I' (U+0131)
+    var evt = document.createEvent("U\u0131Event");
+  });
 }, "Should throw NOT_SUPPORTED_ERR for unrecognized arguments");
 </script>
