--- a/html-templates/additions-to-parsing-xhtml-documents/node-document.html
+++ b/html-templates/additions-to-parsing-xhtml-documents/node-document.html
@@ -25,9 +25,15 @@ test(function() {
     var template = doc.querySelector('#tmpl');
 
     assert_not_null(template, 'Template element should not be null');
-    assert_not_null(template.content, 'Content attribute of template element should not be null');
-    assert_equals(template.ownerDocument, doc.body.ownerDocument, 'Wrong template node owner document');
-    assert_equals(template.content.ownerDocument, doc, 'Wrong template content owner document');
+    assert_not_undefined(template.content,
+            'Content attribute of template element should not be undefined');
+    assert_not_null(template.content,
+            'Content attribute of template element should not be null');
+
+    assert_equals(template.ownerDocument, doc.body.ownerDocument,
+            'Wrong template node owner document');
+    assert_equals(template.content.ownerDocument, doc,
+            'Wrong template content owner document');
 
 }, 'Parsing XHTML: Node\'s node document must be set to that of the element '
     + 'to which it will be appended. Test empty template');
@@ -42,13 +48,18 @@ test(function() {
 
     var template = doc.querySelector('#tmpl');
 
-    assert_equals(template.ownerDocument, doc.body.ownerDocument, 'Wrong template node owner document');
+    assert_equals(template.ownerDocument, doc.body.ownerDocument,
+            'Wrong template node owner document');
 
     assert_not_null(template, 'Template element should not be null');
-    assert_not_null(template.content, 'Content attribute of template element should not be null');
+    assert_not_undefined(template.content,
+            'Content attribute of template element should not be undefined');
+    assert_not_null(template.content,
+            'Content attribute of template element should not be null');
 
     var div = template.content.querySelector('div');
-    assert_equals(template.content.ownerDocument, div.ownerDocument, 'Wrong DIV node owner document');
+    assert_equals(template.content.ownerDocument, div.ownerDocument,
+            'Wrong DIV node owner document');
 
 }, 'Parsing XHTML: Node\'s node document must be set to that of the element '
     + 'to which it will be appended. Test not empty template');
@@ -66,11 +77,18 @@ test(function() {
     var template = doc.querySelector('#tmpl');
     assert_not_null(template, 'Template element should not be null');
     assert_equals(template.ownerDocument, doc, 'Wrong template node owner document');
-    assert_not_null(template.content, 'Content attribute of template element should not be null');
+    assert_not_undefined(template.content,
+            'Content attribute of template element should not be undefined');
+    assert_not_null(template.content,
+            'Content attribute of template element should not be null');
 
     var nestedTemplate = template.content.querySelector('#tmpl2');
     assert_not_null(nestedTemplate, 'Nested template element should not be null');
-    assert_not_null(nestedTemplate.content, 'Content attribute of nested template element should not be null');
+    assert_not_undefined(nestedTemplate.content,
+            'Content attribute of nested template element should not be undefined');
+    assert_not_null(nestedTemplate.content,
+            'Content attribute of nested template element should not be null');
+
     assert_equals(nestedTemplate.ownerDocument, template.content.ownerDocument,
             'Wrong nested template node owner document');
 
@@ -91,6 +109,8 @@ testInIFrame('../resources/template-child-nodes-div.xhtml', function(context) {
 
     assert_equals(template.ownerDocument, doc, 'Wrong template node owner document');
 
+    assert_not_undefined(template.content,
+            'Content attribute of template element should not be undefined');
     assert_not_null(template.content,
             'Content attribute of template element should not be null');
 
