--- a/html-templates/additions-to-the-steps-to-clone-a-node/template-clone-children.html
+++ b/html-templates/additions-to-the-steps-to-clone-a-node/template-clone-children.html
@@ -24,6 +24,9 @@ test(function () {
     var template = doc.querySelector('#tmpl1');
     var copy = template.cloneNode(true);
 
+    assert_not_undefined(copy.content, 'Template clone content attribute should not be undefined');
+    assert_not_null(copy.content, 'Template clone content attribute should not be null');
+
     assert_equals(copy.content.childNodes.length, 2,
             'Wrong number of template content\'s copy child nodes');
     assert_not_null(copy.content.querySelector('#div1'),
@@ -44,6 +47,9 @@ test(function () {
 
     var template = doc.querySelector('#tmpl1');
     var copy = template.cloneNode();
+
+    assert_not_undefined(copy.content, 'Template clone content attribute should not be undefined');
+    assert_not_null(copy.content, 'Template clone content attribute should not be null');
 
     assert_equals(copy.content.childNodes.length, 2,
             'Wrong number of template content\'s copy child nodes');
@@ -67,7 +73,8 @@ test(function () {
     var template = doc.querySelector('#tmpl1');
     var copy = template.cloneNode(false);
 
-    assert_not_null(copy.content, 'Template clone do not have content attribute');
+    assert_not_undefined(copy.content, 'Template clone content attribute is undefined');
+    assert_not_null(copy.content, 'Template clone content attribute is null');
 
     assert_equals(copy.content.childNodes.length, 0,
             'Wrong number of template content\'s copy child nodes');
