--- a/FileAPI/new-Blob.html
+++ b/FileAPI/new-Blob.html
@@ -78,18 +78,30 @@
         assert_equals(b_attrs.size, '[object Attr]'.length);
     }, document.title+', Attr[] (platform array object)');
 
-    test(function() {
-        var b1 = new Blob([], {type:'a'});
-        assert_equals(b1.type, 'a', 'b1');
-        var b2 = new Blob([], {type:'A'});
-        assert_equals(b2.type, 'A', 'b2');
-        var b3 = new Blob([], {type:'\u00E5'});
-        assert_equals(b3.type, '\u00E5', 'b3');
-        var b4 = new Blob([], {type:'\uD801\uDC7E'}); // U+1047E
-        assert_equals(b4.type, '\uD801\uDC7E', 'b4');
-        var b5 = new Blob([], {type:' image/gif '});
-        assert_equals(b5.type, ' image/gif ', 'b5');
-    }, document.title+', type');
+    var type_tests = [
+    // blobParts, type, expected type
+    [[], 'a', 'a'],
+    [[], 'A', 'a'],
+    [[], '\u00E5', ''],
+    [[], '\uD801\uDC7E', ''], // U+1047E
+    [[], ' image/gif ', ' image/gif '],
+    [[], '\timage/gif\t', ''],
+    [[], 'image/gif;\u007f', ''],
+    [[], '\u0130mage/gif', ''], // uppercase i with dot
+    [[], '\u0131mage/gif', ''], // lowercase dotless i
+    [[], 'image/gif\u0000', ''],
+    // check that type isn't changed based on sniffing
+    [[0x3C, 0x48, 0x54, 0x4D, 0x4C, 0x3E], 'unknown/unknown', 'unknown/unknown'], // "<HTML>"
+    [[0x00, 0xFF], 'text/plain', 'text/plain'],
+    [[0x47, 0x49, 0x46, 0x38, 0x39, 0x61], 'image/png', 'image/png'], // "GIF89a"
+    ];
+
+    type_tests.forEach(function(t) {
+        test(function() {
+            var b = new Blob(t[0], {type:t[1]});
+            assert_equals(b.type, t[2]);
+        }, document.title+', type: '+t[1]);
+    });
 
     test(function() {
         var b1 = new Blob(['foo']);
