--- a/FileAPI/filelist-section/filelist.html
+++ b/FileAPI/filelist-section/filelist.html
@@ -4,10 +4,9 @@
     <meta charset='utf-8'>
     <title>FileAPI Test: filelist</title>
     <link rel='author' title='Intel' href='http://www.intel.com'>
-    <link rel='help' href='http://www.w3.org/TR/FileAPI/#filelist-section'>
-    <link rel="help" href="http://www.w3.org/TR/FileAPI/#dfn-length">
-    <link rel="help" href="http://www.w3.org/TR/FileAPI/#dfn-item">
-    <link rel='stylesheet' href='/resources/testharness.css' media='all'>
+    <link rel='help' href='http://dev.w3.org/2006/webapi/FileAPI/#filelist-section'>
+    <link rel="help" href="http://dev.w3.org/2006/webapi/FileAPI/#dfn-length">
+    <link rel="help" href="http://dev.w3.org/2006/webapi/FileAPI/#dfn-item">
     <script src='/resources/testharness.js'></script>
     <script src='/resources/testharnessreport.js'></script>
   </head>
@@ -20,33 +19,40 @@
     <div id='log'></div>
 
     <script>
-      var fileList = document.querySelector('#fileChooser').files;
+      var fileList;
 
       test(function () {
+        fileList = document.querySelector('#fileChooser').files;
         assert_true('FileList' in window, 'window has a FileList property');
       }, 'Check if window has a FileList property');
 
       test(function () {
+        fileList = document.querySelector('#fileChooser').files;
         assert_equals(FileList.length, 0, 'FileList.length is 0');
       }, 'Check if FileList.length is 0');
 
       test(function () {
+        fileList = document.querySelector('#fileChooser').files;
         assert_true(fileList.item instanceof Function, 'item is a instanceof Function');
       }, 'Check if item is a instanceof Function');
 
       test(function() {
+        fileList = document.querySelector('#fileChooser').files;
+        assert_inherits(fileList, 'item', 'item is a method of fileList');
+      }, 'Check if item is a method of fileList');
+
+      test(function() {
+        fileList = document.querySelector('#fileChooser').files;
         assert_equals(fileList.item(0), null, 'item method returns null');
       }, 'Check if the item method returns null when no file selected');
 
       test(function() {
-        assert_own_property(fileList, 'length', 'length is fileList attribute');
+        fileList = document.querySelector('#fileChooser').files;
+        assert_inherits(fileList, 'length', 'length is fileList attribute');
       }, 'Check if length is fileList\'s attribute');
 
-      test(function () {
-        assert_true(typeof(fileList.length) === 'number', 'length of fileList is really number');
-      }, 'Check if length of fileList is really number, must return the number of files in the FileList object');
-
       test(function() {
+        fileList = document.querySelector('#fileChooser').files;
         assert_equals(fileList.length, 0, 'fileList length is 0');
       }, 'Check if the fileList length is 0 when no file selected');
     </script>
