updating provenance html input and output files due to incorrect use of id attribute

--- a/provenance/html/provenance1html.html
+++ b/provenance/html/provenance1html.html
@@ -26,7 +26,7 @@
     <link href=provenance1htmlrules.xml rel=its-rules>
   </head>
   <body>
-    <p id="#pr1">This paragraph was translated from the machine.</p>
-    <p id="#pr2">This text was translated directly by a person.</p>
+    <p class="prov-records-ref"><a href="#pr1"></a>This paragraph was translated from the machine.</p>
+    <p class="prov-records-ref"><a href="#pr2"></a>This text was translated directly by a person.</p>
   </body>
 </html>
