--- a/provenance/html/provenance5html.html
+++ b/provenance/html/provenance5html.html
@@ -29,7 +29,7 @@
     <link href=provenance5htmlrules.xml rel=its-rules>
   </head>
   <body>
-    <p id="#pr1">This paragraph was translated from the machine and subsequently revised.</p>
-    <p id="#pr2">This text was translated directly by a person.</p>
+    <p class="prov-records-ref1"><a href="#pr1"></a>This paragraph was translated from the machine and subsequently revised.</p>
+    <p class="prov-records-ref2"><a href="#pr2"></a>This text was translated directly by a person.</p>
   </body>
 </html>
