Minor editorial change in idlharness test

--- a/performance-timeline/idlharness.html
+++ b/performance-timeline/idlharness.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <h1>idlharness test</h1>
-<p>This test validates the WebIDL included in the user Timing specification.</p>
+<p>This test validates the WebIDL included in the Performance Timeline specification.</p>
 
 <pre id='untested_idl' style='display:none'>
 interface Performance {
