--- a/performance-timeline/idlharness.html
+++ b/performance-timeline/idlharness.html
@@ -4,7 +4,6 @@
 <meta charset="utf-8" />
 <title>idlharness test</title>
 <link rel="author" title="W3C" href="http://www.w3.org/" />
-<link rel="help" href="http://www.w3.org/TR/user-timing/#extensions-performance-interface"/>
 <link rel="help" href="http://www.w3.org/TR/performance-timeline/#performanceentry"/>
 <link rel="help" href="http://www.w3.org/TR/performance-timeline/#performance"/>
 <link rel="help" href="http://www.w3.org/TR/performance-timeline/#performanceentrylist"/>
@@ -20,26 +19,23 @@
 <pre id='untested_idl' style='display:none'>
 interface Performance {
 };
-
-interface PerformanceEntry {
-};
 </pre>
 
 <pre id='idl'>
+interface PerformanceEntry {
+  readonly attribute DOMString name;
+  readonly attribute DOMString entryType;
+  readonly attribute DOMHighResTimeStamp startTime;
+  readonly attribute DOMHighResTimeStamp duration;
+};
+
 partial interface Performance {
-    void mark(DOMString markName);
-    void clearMarks(optional  DOMString markName);
-
-    void measure(DOMString measureName, optional DOMString startMark, optional DOMString endMark);
-    void clearMeasures(optional DOMString measureName);
+  PerformanceEntryList getEntries();
+  PerformanceEntryList getEntriesByType(DOMString entryType);
+  PerformanceEntryList getEntriesByName(DOMString name, optional DOMString entryType);
 };
 
-interface PerformanceMark : PerformanceEntry {
-};
-
-interface PerformanceMeasure : PerformanceEntry {
-};
-       
+typedef sequence &lt;PerformanceEntry> PerformanceEntryList;
 </pre>
 
 <script>
